fix alignment

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,6 +8,7 @@
 }
 
 .center {
+  align-self: center;
   display: flex;
   flex-direction: column;
   align-items: center;
